--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   </style>
 </head>
 <body>
+  <h1>SK FASHION</h1>
   <h2>Barcode A4 Generator</h2>
   <div class="controls">
     <label>Number / Code: <input id="codeInput" type="text" placeholder="Enter number or code"></label>
