--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barcode A4 Generator</title>
-  <!-- JsBarcode and html2pdf -->
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
   <style>
@@ -49,7 +48,7 @@
     <button id="downloadBtn">Download PDF</button>
     <button id="clearBtn">Clear All</button>
   </div>
-  <div class="note">Label size: <strong>3cm × 1.5cm</strong>. Each label has dashed borders for easy cutting.</div>
+  <div class="note">Label size: <strong>3cm × 1.5cm</strong>. Each label has dashed borders for easy cutting. Barcode bars have white space between them.</div>
 
   <div id="book" class="book"></div>
 
@@ -100,12 +99,14 @@
         try{
           JsBarcode(svg, String(code), {
             format: 'CODE128',
-            displayValue: true,     // ✅ show number under barcode
-            fontSize: 18,
+            displayValue: true,      // show number below barcode
+            fontSize: 14,
             textMargin: 2,
             width: 1,
             height: 60,
-            margin: 0
+            margin: 0,
+            lineColor: "#000000",    // black bars
+            background: "#FFFFFF"    // white between bars
           });
         }catch(e){
           svg.innerHTML = '<text x="10" y="20">'+String(code)+'</text>';
